# devcompanion

./: .gitignore  Cargo.toml  README.md  linkedin-dev-companion-architecture.md
config/: default.toml
crates/ldc-copilot/: Cargo.toml
crates/ldc-copilot/src/: lib.rs
crates/ldc-core/: Cargo.toml
crates/ldc-core/src/: lib.rs
crates/ldc-daemon/: Cargo.toml
crates/ldc-daemon/src/: analysis.rs  api.rs  config.rs  db.rs  draft.rs  error.rs  main.rs
crates/ldc-ingestor/: Cargo.toml
crates/ldc-ingestor/src/: lib.rs
crates/ldc-linkedin/: Cargo.toml
crates/ldc-linkedin/src/: lib.rs
crates/ldc-llm/: Cargo.toml
crates/ldc-llm/src/: lib.rs
docs/: architecture.md  progress.md  requirements.md
vscode-extension/: package-lock.json  package.json
vscode-extension/src/: config.ts  extension.ts
vscode-extension/src/api/: rustBackend.ts
vscode-extension/src/tracker/: eventCollector.ts  gitWatcher.ts  sessionManager.ts
