[package]
name = "ldc-daemon"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
dirs.workspace = true
ldc-core = { path = "../ldc-core" }
ldc-ingestor = { path = "../ldc-ingestor" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
ldc-llm = { path = "../ldc-llm" }
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tower.workspace = true
